--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
-    "@types/node": "^17.0.42",
-    "@vercel/node": "^2.9.6",
-    "typescript": "^4.7.3"
-  },
-  "dependencies": {
-    "axios": "^1.7.9"
+    "@types/node": "^17.0.45",
+    "@vercel/node": "^2.15.10",
+    "axios": "^1.7.9",
+    "typescript": "^4.9.5"
   }
 }
