--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,16 @@
 // tsconfig.json
 {
     "compilerOptions": {
-      "target": "es2020",
-      "module": "esnext",
-      "lib": ["esnext"],
-      "moduleResolution": "node",
-      "strict": true,
-      "esModuleInterop": true,
-      "skipLibCheck": true,
-      "outDir": "dist",
-      "types": ["node"]
+        "outDir": "./dist",
+        "rootDir": "./api",
+        "target": "es2020",
+        "module": "esnext",
+        "lib": ["esnext"],
+        "moduleResolution": "node",
+        "strict": true,
+        "esModuleInterop": true,
+        "skipLibCheck": true,
+        "types": ["node"]
     },
     "include": ["api/**/*.ts"]
   }
