--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "repository": "https://github.com/vercel/examples.git",
   "license": "MIT",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "tsc",
     "dev": "vercel dev",
