--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "@vercel/node": "^2.15.10",
     "axios": "^1.7.9",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "https-proxy-agent": "^7.0.6"
   }
 }
