--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
     "version": 2,
-    "routes": [
+    "rewrites": [
       {
-        "src": "/(.*)", 
-        "dest": "/api/gumroad.ts"   
+       "source": "/l/:slug",
+       "destination": "/api/gumroad"   
       }
     ]
 }
